<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_name_input"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/txt_name_input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_registration"
        tools:ignore="Autofill" />

    <ImageButton
        android:id="@+id/btn_add_record"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/btn_record_description"
        android:text="@string/btn_record"
        app:layout_constraintStart_toStartOf="@+id/txt_name_input"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_input"
        app:srcCompat="@drawable/ic_record" />

    <ImageButton
        android:id="@+id/btn_add_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/btn_add_play"
        app:layout_constraintEnd_toEndOf="@+id/txt_name_input"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_input"
        app:srcCompat="@drawable/ic_play" />

    <TextView
        android:id="@+id/txt_recording_present"
        android:layout_width="232dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_recording_not_present"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintStart_toStartOf="@+id/txt_name_input"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_record" />

    <Button
        android:id="@+id/btn_add_speaker"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_add_speaker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recording_present" />

</android.support.constraint.ConstraintLayout>