<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="186dp" />

        <Button
            android:id="@+id/btn_list_speakers"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_list_speakers" />

        <Button
            android:id="@+id/btn_nav_add_speaker"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_add_speaker" />

        <Button
            android:id="@+id/btn_nav_identify_speaker"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_nav_identify_speaker" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>