<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentificationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_identify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_identify_recording_present"
        android:layout_width="232dp"
        android:layout_height="26dp"
        android:layout_marginTop="104dp"
        android:text="@string/txt_recordingnotpresent"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="227dp"
        android:layout_height="106dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_identify">

        <TextView
            android:id="@+id/txt_result_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_identify_result_id" />

        <TextView
            android:id="@+id/txt_result_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_identify_result_score" />

        <TextView
            android:id="@+id/txt_result_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_identify_result_match" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/btn_identify_record"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/btn_record_description"
        android:text="@string/btn_record"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_record" />

    <ImageButton
        android:id="@+id/btn_identify_play"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/btn_record_description"
        android:text="@string/btn_record"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/btn_identify_record"
        app:srcCompat="@drawable/ic_play" />

</android.support.constraint.ConstraintLayout>